@@ -1168,15 +1168,21 @@ operator|.
 name|length
 condition|)
 block|{
-if|if
-condition|(
+name|buffer
+operator|.
+name|append
+argument_list|(
+name|values
+index|[
 name|index
 index|[
 literal|0
 index|]
-operator|>
-literal|0
-operator|&&
+index|]
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
 name|values
 index|[
 name|index
@@ -1189,6 +1195,17 @@ name|length
 argument_list|()
 operator|>
 literal|0
+operator|&&
+name|index
+index|[
+literal|0
+index|]
+operator|+
+literal|1
+operator|<
+name|values
+operator|.
+name|length
 condition|)
 name|buffer
 operator|.
@@ -1197,19 +1214,11 @@ argument_list|(
 name|multiValuedSeparator
 argument_list|)
 expr_stmt|;
-name|buffer
-operator|.
-name|append
-argument_list|(
-name|values
-index|[
 name|index
 index|[
 literal|0
 index|]
 operator|++
-index|]
-argument_list|)
 expr_stmt|;
 block|}
 name|int
@@ -1282,15 +1291,24 @@ operator|.
 name|length
 condition|)
 block|{
-if|if
-condition|(
+name|buffer
+operator|.
+name|append
+argument_list|(
+name|values
+index|[
 name|index
 index|[
 literal|0
 index|]
-operator|>
-literal|0
-operator|&&
+index|]
+operator|.
+name|stringValue
+argument_list|()
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
 name|values
 index|[
 name|index
@@ -1317,6 +1335,17 @@ name|length
 argument_list|()
 operator|>
 literal|0
+operator|&&
+name|index
+index|[
+literal|0
+index|]
+operator|+
+literal|1
+operator|<
+name|values
+operator|.
+name|length
 condition|)
 name|buffer
 operator|.
@@ -1325,22 +1354,11 @@ argument_list|(
 name|multiValuedSeparator
 argument_list|)
 expr_stmt|;
-name|buffer
-operator|.
-name|append
-argument_list|(
-name|values
-index|[
 name|index
 index|[
 literal|0
 index|]
 operator|++
-index|]
-operator|.
-name|stringValue
-argument_list|()
-argument_list|)
 expr_stmt|;
 block|}
 name|int
